[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://mainsprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://maininput.tscn" type="PackedScene" id=3]
[ext_resource path="res://ocean.png" type="Texture" id=4]
[ext_resource path="res://samplesoundtrack.ogg" type="AudioStream" id=5]
[ext_resource path="res://ThinkTac- R - Create Learn  Enjoy.png" type="Texture" id=6]

[node name="main" type="Sprite"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.965, 327.759 )
scale = Vector2( 3.45515, 3.91306 )
texture = ExtResource( 4 )

[node name="maininput" parent="." instance=ExtResource( 3 )]

[node name="streamplayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="mainsprite" parent="." instance=ExtResource( 2 )]

[node name="speed_answer_1" type="Label" parent="."]
margin_left = 920.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 78.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed_answer_2" type="Label" parent="."]
margin_left = 920.0
margin_top = 104.0
margin_right = 960.0
margin_bottom = 118.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dis_label" type="Label" parent="."]
margin_left = 664.0
margin_right = 745.0
margin_bottom = 31.0
rect_scale = Vector2( 2, 2 )
text = "Distance 
    (m)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tim_label" type="Label" parent="."]
margin_left = 808.0
margin_right = 848.0
margin_bottom = 31.0
rect_scale = Vector2( 2, 2 )
text = "Time
  (s) "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_label" type="Label" parent="."]
margin_left = 904.0
margin_right = 951.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
text = "Answer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instruction" type="Label" parent="."]
margin_left = 272.0
margin_top = 478.0
margin_right = 464.0
margin_bottom = 518.0
rect_scale = Vector2( 2, 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thinktaclogo" type="Sprite" parent="."]
position = Vector2( 112, 512 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )

[node name="acc_answer" type="Label" parent="."]
margin_left = 920.0
margin_top = 144.0
margin_right = 960.0
margin_bottom = 158.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}
